# rag-md

./: README.md  index.html  pyproject.toml  rag.py  rag_md.py  rag_mdV2.py  rag_ui.py  server.py
data/: alice.md
flagged/: log.csv
