[tool.poetry]
name = "rag-llama3"
version = "0.1.0"
description = ""
authors = ["venysssssssssss <shablaur7@hotmail.com>"]
license = "NIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
ollama = "^0.1.9"
langchain = "^0.1.17"
beautifulsoup4 = "^4.12.3"
chromadb = "^0.5.0"
gradio = "^4.29.0"
unstructured = "^0.13.6"
markdown = "^3.6"
torch = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
